--- a/eAPW/eAPW/eAPW.csproj
+++ b/eAPW/eAPW/eAPW.csproj
@@ -87,6 +87,12 @@
     <Compile Include="FrmPrijava.Designer.cs">
       <DependentUpon>FrmPrijava.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmSkladiste.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmSkladiste.Designer.cs">
+      <DependentUpon>FrmSkladiste.cs</DependentUpon>
+    </Compile>
     <Compile Include="Kategorija.cs">
       <DependentUpon>DataModel.tt</DependentUpon>
     </Compile>
@@ -139,6 +145,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FrmPrijava.resx">
       <DependentUpon>FrmPrijava.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmSkladiste.resx">
+      <DependentUpon>FrmSkladiste.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
