--- a/eAPW/eAPW/eAPW.csproj
+++ b/eAPW/eAPW/eAPW.csproj
@@ -128,6 +128,9 @@
     <Compile Include="Rezervacija_has_Djelovi.cs">
       <DependentUpon>DataModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="sysdiagram.cs">
+      <DependentUpon>DataModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Tip.cs">
       <DependentUpon>DataModel.tt</DependentUpon>
     </Compile>
