--- a/eAPW/eAPW/App.config
+++ b/eAPW/eAPW/App.config
@@ -8,8 +8,9 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
   </startup>
   <connectionStrings>
+    <add name="ProgramskoInzenjerstvoDBEntities" connectionString="metadata=res://*/DataModel.csdl|res://*/DataModel.ssdl|res://*/DataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-4NH5DPQ\MSSQL;initial catalog=ProgramskoInzenjerstvoDB;persist security info=True;user id=sa;password=OranGisi123574;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
   
-  <add name="ProgramskoInzenjerstvoDBEntities" connectionString="metadata=res://*/DataModel.csdl|res://*/DataModel.ssdl|res://*/DataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-4NH5DPQ\MSSQL;initial catalog=ProgramskoInzenjerstvoDB;persist security info=True;user id=sa;password=OranGisi123574;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
@@ -20,4 +21,14 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <appSettings>
+    <add key="LokacijaID" value="2"/>
+    <add key="LokacijaNaziv" value="Poslovnica Varaždinske Toplice"/>
+    
+   <!--
+      1 - Centralno skladište
+      2 - Poslovnica Varaždinske Toplice
+      3 - Poslovnica Varaždin
+   -->
+  </appSettings>
 </configuration>
