--- a/eAPW/eAPW/App.config
+++ b/eAPW/eAPW/App.config
@@ -8,8 +8,8 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
   </startup>
   <connectionStrings>
-    <add name="ProgramskoInzenjerstvoDBEntities" connectionString="metadata=res://*/DataModel.csdl|res://*/DataModel.ssdl|res://*/DataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-4NH5DPQ\MSSQL;initial catalog=ProgramskoInzenjerstvoDB;persist security info=True;user id=sa;password=OranGisi123574;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+    
+  <add name="ProgramskoInzenjerstvoDBEntities" connectionString="metadata=res://*/DataModel.csdl|res://*/DataModel.ssdl|res://*/DataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-4NH5DPQ\MSSQL;initial catalog=ProgramskoInzenjerstvoDB;persist security info=True;user id=sa;password=OranGisi123574;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
@@ -22,8 +22,8 @@
     </providers>
   </entityFramework>
   <appSettings>
-    <add key="LokacijaID" value="2"/>
-    <add key="LokacijaNaziv" value="Poslovnica Varaždinske Toplice"/>
+    <add key="LokacijaID" value="1" />
+    <add key="LokacijaNaziv" value="Centralno skladište" />
     
    <!--
       1 - Centralno skladište
