--- a/eAPW/eAPW/App.config
+++ b/eAPW/eAPW/App.config
@@ -22,8 +22,8 @@
     </providers>
   </entityFramework>
   <appSettings>
-    <add key="LokacijaID" value="1" />
-    <add key="LokacijaNaziv" value="Centralno skladište" />
+    <add key="LokacijaID" value="2" />
+    <add key="LokacijaNaziv" value="Poslovnica Varaždinske Toplice" />
     
    <!--
       1 - Centralno skladište
