popravne izmjene kod rezervacije

--- a/eAPW/eAPW/App.config
+++ b/eAPW/eAPW/App.config
@@ -26,8 +26,8 @@
     </providers>
   </entityFramework>
   <appSettings>
-    <add key="LokacijaID" value="2" />
-    <add key="LokacijaNaziv" value="Poslovnica Varaždinske Toplice" />
+    <add key="LokacijaID" value="3" />
+    <add key="LokacijaNaziv" value="Poslovnica Varaždin" />
     
    <!--
       1 - Centralno skladište
