--- a/eAPW/eAPW/App.config
+++ b/eAPW/eAPW/App.config
@@ -8,11 +8,8 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
   </startup>
   <connectionStrings>
-    <add name="ProgramskoInzenjerstvoDBEntities" connectionString="metadata=res://*/DataModel.csdl|res://*/DataModel.ssdl|res://*/DataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-4NH5DPQ\MSSQL;initial catalog=ProgramskoInzenjerstvoDB;persist security info=True;user id=sa;password=OranGisi123574;multipleactiveresultsets=True;application name=EntityFramework&quot;"
-      providerName="System.Data.EntityClient" />
-    <add name="eAPW.Properties.Settings.ProgramskoInzenjerstvoDBConnectionString"
-      connectionString="Data Source=DESKTOP-4NH5DPQ\MSSQL;Initial Catalog=ProgramskoInzenjerstvoDB;Persist Security Info=True;User ID=sa;Password=OranGisi123574;MultipleActiveResultSets=True;Application Name=EntityFramework"
-      providerName="System.Data.SqlClient" />
+    <add name="ProgramskoInzenjerstvoDBEntities" connectionString="metadata=res://*/DataModel.csdl|res://*/DataModel.ssdl|res://*/DataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-4NH5DPQ\MSSQL;initial catalog=ProgramskoInzenjerstvoDB;persist security info=True;user id=sa;password=OranGisi123574;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="eAPW.Properties.Settings.ProgramskoInzenjerstvoDBConnectionString" connectionString="Data Source=DESKTOP-4NH5DPQ\MSSQL;Initial Catalog=ProgramskoInzenjerstvoDB;Persist Security Info=True;User ID=sa;Password=OranGisi123574;MultipleActiveResultSets=True;Application Name=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   
   <entityFramework>
