--- a/eAPW/eAPW/packages.config
+++ b/eAPW/eAPW/packages.config
@@ -4,4 +4,6 @@
   <package id="Microsoft.Report.Viewer" version="11.0.0.0" targetFramework="net452" />
   <package id="Microsoft.ReportViewer.Runtime.Common" version="12.0.2402.15" targetFramework="net452" />
   <package id="Microsoft.ReportViewer.Runtime.WinForms" version="12.0.2402.15" targetFramework="net452" />
+  <package id="PDFsharp" version="1.32.3057.0" targetFramework="net452" />
+  <package id="PDFsharp-MigraDoc-GDI" version="1.32.4334.0" targetFramework="net452" />
 </packages>
